# Todd

./: .gitignore  Makefile  README.md  meson.build
src/: array.c  array.h  boot.s  cmos.c  cmos.cpp  cmos.h  common.c  common.cpp  common.h  elf.c  elf.h  fat.c  fat.h  gdt.c  gdt.cpp  gdt.h  gdt.s  hashmap.cpp  hashmap.h  heap.c  heap.cpp  heap.h  idt.c  idt.cpp  idt.h  io.c  io.cpp  io.h  io_port.c  io_port.h  isr.c  isr.cpp  isr.h  keyboard.c  keyboard.cpp  keyboard.h  main.c  main.cpp  memory.c  memory.cpp  (+37 more)
src/lisp/: exe.c  exe.cpp  exe.cpp~  exe.h  exe.h~  lex_test.h  lex_test.h~  lexer.c  lexer.cpp~  lexer.h  meson.build  meson.build~  methods.c  methods.cpp  methods.cpp~  methods.h  methods.h~  parser.c  parser.cpp~  parser.h  scope.c  scope.h
usr/: link.ld  printf_test.c  system.h  system.s  todd.c  wordle.c  wordle_dictionary.h
usr/include/: file.h  stdio.h  string.h  system.h
usr/lib/: file.c  stdio.c  string.c  system.c  system.s
usr/lisp/: array.c  array.h  exe.c  exe.h  lexer.c  lexer.h  main.c  methods.c  methods.h  parser.c  parser.h  scope.c  scope.h
